# julie-semantic-sidecar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
.memories/: autonomous-run-2026-07-19-semantic-p2a.md
.memories/2026-07-24/: 052127_41fb.md  052907_a36c.md  053750_5293.md  054612_0274.md  054829_3b86.md  070131_3cf6.md  125109_a2b4.md  131458_2a92.md  132955_4fc0.md  142953_c374.md  145046_395c.md  150903_3f92.md  154102_32c5.md
.razorback/sdd/: takeover-phase-9-macos-x64-report.md
docs/: rc-promotion-gate.md
docs/findings/: 2026-07-20-model-throughput-rss-bench.md  2026-07-22-accelerated-backend-baseline.md  2026-07-22-linux-cuda-package-proof.md  2026-07-22-linux-vulkan-package-proof.md  2026-07-22-metal-package-proof.md  2026-07-22-windows-vulkan-package-proof.md  2026-07-24-rc3-apple-metal-package-proof.md  2026-07-24-rc4-portable-package-proof.md
docs/plans/: 2026-07-19-p2a-plan-review-record.md  2026-07-19-p2a-sidecar-implementation-plan.md  2026-07-22-accelerated-backends-and-model-strategy-design.md  2026-07-22-accelerated-backends-and-model-strategy-implementation-plan.md
docs/release-notes/: v0.1.0-rc.4.md
scripts/: bench-throughput.py  conformance.sh  hardware-smoke.ps1  hardware-smoke.sh  package-env.ps1  package.ps1  package.sh  patch-native-source.py  probe-concurrency.py
scripts/tests/: package-env.tests.ps1  test_bench_throughput.py  test_patch_native_source.py  test_probe_concurrency.py
src/: backend_select.rs  engine.rs  engine_trait.rs  health.rs  lib.rs  main.rs  manifest.rs  package_manifest.rs  prepare.rs  protocol.rs  sanitize.rs  stdio_guard.rs  truncate.rs
tests/: cli_tests.rs  conformance.rs  engine_tests.rs  manifest_tests.rs  package_manifest_tests.rs  prepare_tests.rs  protocol_tests.rs  serve_tests.rs
