[package]
name = "julie-semantic-sidecar"
version = "0.1.0-rc.4"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Stdio embedding sidecar speaking the julie.embedding.sidecar v1 protocol"
repository = "https://github.com/anortham/julie-semantic-sidecar"
publish = false

[lib]
name = "julie_semantic_sidecar"
path = "src/lib.rs"

[[bin]]
name = "julie-semantic-sidecar"
path = "src/main.rs"

[[bin]]
name = "julie-package-manifest"
path = "src/bin/julie-package-manifest.rs"

[features]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]
rocm = ["llama-cpp-2/rocm"]
dynamic-backends = ["llama-cpp-2/dynamic-backends"]

[dependencies]
dirs = "6.0.0"
fs4 = "1.1.0"
libc = "0.2.186"
libloading = "0.8.9"
llama-cpp-2 = { version = "=0.1.151", default-features = false }
llama-cpp-sys-2 = { version = "=0.1.151", default-features = false }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
ureq = "3.2.1"

[dev-dependencies]
fs4 = "1.1.0"
tempfile = "3.27.0"
tiny_http = "0.12.0"
